# duet

./: LICENSE  Makefile  README.md  duet.cabal  stack.yaml
app/: Main.hs
src/: Duet.hs
src/Duet/: Instruction.hs  Interpreter.hs  Main.hs  Prelude.hs  Reference.hs  RegisterId.hs  Registers.hs  Value.hs
