name:                duet
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/superpowerscorp/duet#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          ops@superpowerscorp.com
copyright:           2017 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Duet
  other-modules:       Duet.Prelude
  build-depends:       base  >= 4.7 && < 5
                     , focus-prelude
  default-language:    Haskell2010

executable duet-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , focus-prelude
                     , duet
  default-language:    Haskell2010

test-suite duet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , focus-prelude
                     , hspec
                     , duet
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/superpowerscorp/duet
