name:                duet
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/superpowerscorp/duet#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          ops@superpowerscorp.com
copyright:           2017 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Duet.Instruction
                     , Duet.Interpreter
                     , Duet.Main
                     , Duet.Reference
                     , Duet.RegisterId
                     , Duet.Registers
                     , Duet.Value
  other-modules:       Duet.Prelude
  build-depends:       base  >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , focus-prelude
                     , text >= 1.2.2.2
  default-language:    Haskell2010

executable duet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5.7.1
                     , duet
                     , focus-prelude
                     , text >= 1.2.2.2
  default-language:    Haskell2010

test-suite duet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , containers >= 0.5.7.1
                     , duet
                     , focus-prelude
                     , hspec
                     , text >= 1.2.2.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/superpowerscorp/duet
